--- a/BeamWallet/ViewControllers/Main/Settings/UnlockPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/Main/Settings/UnlockPasswordViewController.xib
@@ -21,6 +21,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UnlockPasswordViewController" customModule="BeamWallet" customModuleProvider="target">
             <connections>
                 <outlet property="errorLabel" destination="nLh-as-DuP" id="nrM-sg-bjs"/>
+                <outlet property="heightConstraint" destination="ZKf-N0-Exi" id="3Tg-yd-JrV"/>
                 <outlet property="mainStack" destination="Syj-NU-whR" id="r3G-Uy-tph"/>
                 <outlet property="passField" destination="CXv-0n-vz1" id="c0S-HO-tYO"/>
                 <outlet property="stackWidth" destination="dax-qW-kAt" id="OV3-H3-Obj"/>
