--- a/BeamWallet/ViewControllers/Login/EnterWalletPasswordViewController.xib
+++ b/BeamWallet/ViewControllers/Login/EnterWalletPasswordViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -26,8 +26,10 @@
                 <outlet property="errorLabel" destination="h25-0u-qRO" id="6tI-nz-L9L"/>
                 <outlet property="mainStack" destination="vUf-hW-nJa" id="4bm-Pt-d8w"/>
                 <outlet property="passField" destination="gDD-bM-m0V" id="eSe-1W-C7L"/>
+                <outlet property="passViewHeight" destination="2yF-bN-MWa" id="9oj-7T-K0c"/>
                 <outlet property="stackWidth" destination="r1j-y8-kRz" id="BfW-vV-qtI"/>
                 <outlet property="stackY" destination="2g2-iY-1pl" id="q1E-Fp-gDw"/>
+                <outlet property="touchIdButton" destination="xxN-ni-oL7" id="xBt-5V-2KF"/>
                 <outlet property="view" destination="sPr-XI-erP" id="dCm-mx-xBc"/>
             </connections>
         </placeholder>
@@ -37,20 +39,20 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="vUf-hW-nJa">
-                    <rect key="frame" x="30" y="75" width="315" height="432"/>
+                    <rect key="frame" x="30" y="75" width="315" height="468.5"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="F4r-MH-6cH">
-                            <rect key="frame" x="10.5" y="0.0" width="294.5" height="129"/>
+                            <rect key="frame" x="22.5" y="0.0" width="270" height="129.5"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="BBw-Pd-Cfa">
-                                    <rect key="frame" x="96.5" y="0.0" width="101" height="90"/>
+                                    <rect key="frame" x="84.5" y="0.0" width="101" height="90"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="90" id="OIr-eB-NbS"/>
                                         <constraint firstAttribute="width" constant="101" id="kCy-D3-M2V"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your password to access the wallet" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U5v-Lj-JVe">
-                                    <rect key="frame" x="0.0" y="110" width="294.5" height="19"/>
+                                    <rect key="frame" x="0.0" y="110" width="270" height="19.5"/>
                                     <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -61,7 +63,7 @@
                             </subviews>
                         </stackView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="od7-dn-mp3">
-                            <rect key="frame" x="0.0" y="179" width="315" height="100"/>
+                            <rect key="frame" x="0.0" y="179.5" width="315" height="100"/>
                             <subviews>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gDD-bM-m0V" customClass="BMField" customModule="BeamWallet" customModuleProvider="target">
                                     <rect key="frame" x="15" y="5" width="285" height="32"/>
@@ -110,8 +112,8 @@
                             </constraints>
                             <viewLayoutGuide key="safeArea" id="UG1-s4-pcR"/>
                         </view>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Y5a-wk-RUK">
-                            <rect key="frame" x="31" y="329" width="253" height="103"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="Y5a-wk-RUK">
+                            <rect key="frame" x="31" y="329.5" width="253" height="139"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eoB-qE-PXI" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="253" height="44"/>
@@ -136,7 +138,7 @@
                                     </connections>
                                 </button>
                                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B50-3I-WXb" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="59" width="253" height="44"/>
+                                    <rect key="frame" x="0.0" y="69" width="253" height="44"/>
                                     <color key="backgroundColor" red="0.10980392160000001" green="0.26274509800000001" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="253" id="abk-b9-t6M"/>
@@ -157,14 +159,24 @@
                                         <action selector="onChangeWalletWithSender:" destination="-1" eventType="touchUpInside" id="Sm8-F6-7A0"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K5g-Kk-hFg">
-                                    <rect key="frame" x="0.0" y="74" width="253" height="29"/>
+                                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K5g-Kk-hFg">
+                                    <rect key="frame" x="0.0" y="69" width="253" height="0.0"/>
                                     <fontDescription key="fontDescription" name="SFProDisplay-Semibold" family="SF Pro Display" pointSize="14"/>
                                     <state key="normal" title="Forgot password?">
                                         <color key="titleColor" red="0.0" green="0.96470588239999999" blue="0.82352941180000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </state>
                                     <connections>
                                         <action selector="onForgotPasswordWithSender:" destination="-1" eventType="touchUpInside" id="m8J-Vh-HDY"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xxN-ni-oL7">
+                                    <rect key="frame" x="0.0" y="94" width="253" height="45"/>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <state key="normal" image="iconTouchid">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="onTouchIdWithSender:" destination="-1" eventType="touchUpInside" id="5mZ-03-7Or"/>
                                     </connections>
                                 </button>
                             </subviews>
@@ -185,6 +197,7 @@
     </objects>
     <resources>
         <image name="iconChange" width="16" height="16"/>
+        <image name="iconTouchid" width="45" height="45"/>
         <image name="iconWalletSmall" width="16" height="16"/>
         <image name="logo" width="159" height="142"/>
     </resources>
