--- a/BeamWallet/ViewControllers/Main/Addresses/Cell/AddressSwitchCell.xib
+++ b/BeamWallet/ViewControllers/Main/Addresses/Cell/AddressSwitchCell.xib
@@ -27,7 +27,7 @@
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="6HJ-nj-g1a">
                         <rect key="frame" x="15" y="10" width="290" height="59.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Activate address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vew-nk-nqn">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Activate address" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vew-nk-nqn">
                                 <rect key="frame" x="0.0" y="21.5" width="120" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="5iX-Pb-BRf"/>
